--- a/addons/analytic/views/analytic_line_views.xml
+++ b/addons/analytic/views/analytic_line_views.xml
@@ -49,7 +49,8 @@
             <p class="o_view_nocontent_empty_folder">
                 No activity yet on this account
             </p><p>
-                In Odoo, sales orders and projects are implemented using
+                <!-- Debranding odoo: Replaced 'Odoo' with 'Calypso' -->
+                In Calypso, sales orders and projects are implemented using
                 analytic accounts. You can track costs and revenues to analyse
                 your margins easily.
             </p><p>
@@ -164,7 +165,8 @@
             <p class="o_view_nocontent_empty_folder">
                No activity yet
             </p><p>
-                In Odoo, sales orders and projects are implemented using
+                <!-- Debranding odoo: Replaced 'Odoo' with 'Calypso' -->
+                In Calypso, sales orders and projects are implemented using
                 analytic accounts. You can track costs and revenues to analyse
                 your margins easily.
             </p><p>
