--- a/addons/payment/views/payment_method_views.xml
+++ b/addons/payment/views/payment_method_views.xml
@@ -56,9 +56,10 @@
                               groups="base.group_no_one"
                         >
                             <div class="alert alert-warning" role="alert">
+                                <!-- Debranding odoo: Replaced 'Odoo' with 'Calypso' -->
                                 <i class="fa fa-exclamation-triangle"/> These properties are set to
                                 match the behavior of providers and that of their integration with
-                                Odoo regarding this payment method. Any change may result in errors
+                                Calypso regarding this payment method. Any change may result in errors
                                 and should be tested on a test database first.
                             </div>
                             <group>
