--- a/addons/account/views/partner_view.xml
+++ b/addons/account/views/partner_view.xml
@@ -270,7 +270,8 @@
               <p class="o_view_nocontent_smiling_face">
                 Create a new customer in your address book
               </p><p>
-                Odoo helps you easily track all activities related to a customer.
+                <!-- Debranding odoo: Replaced 'Odoo' with 'Calypso' -->
+                Calypso helps you easily track all activities related to a customer.
               </p>
             </field>
         </record>
@@ -284,7 +285,8 @@
               <p class="o_view_nocontent_smiling_face">
                 Create a new supplier in your address book
               </p><p>
-                Odoo helps you easily track all activities related to a supplier.
+                <!-- Debranding odoo: Replaced 'Odoo' with 'Calypso' -->
+                Calypso helps you easily track all activities related to a supplier.
               </p>
             </field>
         </record>
