--- a/addons/auth_totp/views/res_users_views.xml
+++ b/addons/auth_totp/views/res_users_views.xml
@@ -37,10 +37,11 @@
                                 Two-factor Authentication ("2FA") is a system of double authentication.
                                 The first one is done with your password and the second one with a code you get from a dedicated mobile app.
                                 Popular ones include Authy, Google Authenticator or the Microsoft Authenticator.
-                                <a href="https://www.odoo.com/documentation/17.0/applications/general/auth/2fa.html" title="Learn More" target="_blank">
+                                <!-- Debranding Odoo -->
+                                <!-- <a href="https://www.odoo.com/documentation/17.0/applications/general/auth/2fa.html" title="Learn More" target="_blank">
                                     <i title="Documentation" class="fa fa-fw o_button_icon fa-info-circle"></i>
                                     Learn More
-                                </a>
+                                </a> -->
                                 </span>
                                 <span invisible="not totp_enabled" class="text-muted">This account is protected!</span>
                             </div>
@@ -82,10 +83,11 @@
                         Two-factor Authentication ("2FA") is a system of double authentication.
                         The first one is done with your password and the second one with a code you get from a dedicated mobile app.
                         Popular ones include Authy, Google Authenticator or the Microsoft Authenticator.
-                        <a href="https://www.odoo.com/documentation/17.0/applications/general/auth/2fa.html" title="Learn More" target="_blank">
+                        <!-- Debranding Odoo -->
+                        <!-- <a href="https://www.odoo.com/documentation/17.0/applications/general/auth/2fa.html" title="Learn More" target="_blank">
                             <i title="Documentation" class="fa fa-fw o_button_icon fa-info-circle"></i>
                             Learn More
-                        </a>
+                        </a> -->
                     </span>
                     <group name="auth_devices" string="Trusted Devices" invisible="not totp_trusted_device_ids">
                         <div colspan="2">
