--- a/addons/auth_totp_portal/views/templates.xml
+++ b/addons/auth_totp_portal/views/templates.xml
@@ -13,9 +13,10 @@
             <section>
                 <h4>
                     Two-factor authentication
-                    <a href="https://www.odoo.com/documentation/17.0/applications/general/auth/2fa.html" target="_blank">
+                    <!-- Debranding Odoo -->
+                    <!-- <a href="https://www.odoo.com/documentation/17.0/applications/general/auth/2fa.html" target="_blank">
                         <i title="Documentation" class="fa fa-fw o_button_icon fa-info-circle"></i>
-                    </a>
+                    </a> -->
                 </h4>
                 <t t-if="not user_id.totp_enabled">
                     <div class="alert alert-secondary" role="status">
