--- a/addons/portal/views/portal_templates.xml
+++ b/addons/portal/views/portal_templates.xml
@@ -281,9 +281,10 @@
                     <t t-out="title"/>
                 </div>
                 <t t-if="entries" t-out="entries"/>
-                <div class="d-none d-lg-block mt-5 small text-center text-muted">
+                <!-- Debranding Odoo -->
+                <!-- <div class="d-none d-lg-block mt-5 small text-center text-muted">
                     Powered by <a target="_blank" href="http://www.odoo.com?utm_source=db&amp;utm_medium=portal" title="odoo"><img src="/web/static/img/logo.png" alt="Odoo Logo" height="15"/></a>
-                </div>
+                </div> -->
             </div>
         </div>
     </template>
