--- a/addons/web/views/webclient_templates.xml
+++ b/addons/web/views/webclient_templates.xml
@@ -19,8 +19,9 @@
     <head>
         <meta charset="utf-8"/>
         <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-        <title t-esc="title or 'Odoo'"/>
-        <link type="image/x-icon" rel="shortcut icon" t-att-href="x_icon or '/web/static/img/favicon.ico'"/>
+        <!-- Debranding odoo: Replaced 'Odoo' with 'Calypso' -->
+        <title t-esc="title or 'Calypso'"/>
+        <link type="image/x-icon" rel="shortcut icon" t-att-href="x_icon or '/web/static/img/haliblu-logo.png'"/>
         <script id="web.layout.odooscript" type="text/javascript">
             var odoo = {
                 csrf_token: "<t t-nocache="The csrf token must always be up to date." t-esc="request.csrf_token(None)"/>",
@@ -88,17 +89,19 @@
 
     <template id="brand_promotion_message" name="Brand Promotion Message">
         <t t-set="odoo_logo">
-            <a target="_blank"
+            <!-- Debranding odoo: Replaced 'Odoo' with 'Calypso' and commenting the <a> tag</a> -->
+            <!-- <a target="_blank"
                 t-attf-href="http://www.odoo.com?utm_source=db&amp;utm_medium=#{_utm_medium}"
-                class="badge text-bg-light">
-                <img alt="Odoo"
+                class="badge text-bg-light"> -->
+                <img alt="Calypso"
                     src="/web/static/img/odoo_logo_tiny.png"
                     width="62" height="20"
                     style="width: auto; height: 1em; vertical-align: baseline;"/>
-            </a>
+            <!-- </a> -->
         </t>
-        <t t-set="final_message">Powered by %s%s</t>
-        <t t-out="final_message % (odoo_logo, _message and ('- ' + _message) or '')"/>
+        <!-- Debranding odoo -->
+        <!-- <t t-set="final_message">Powered by %s%s</t>
+        <t t-out="final_message % (odoo_logo, _message and ('- ' + _message) or '')"/> -->
     </template>
     <template id="brand_promotion" name="Brand Promotion">
         <div class="o_brand_promotion">
@@ -127,7 +130,8 @@
                             <t t-if="not disable_database_manager">
                                 <a class="border-end pe-2 me-1" href="/web/database/manager">Manage Databases</a>
                             </t>
-                            <a href="https://www.odoo.com?utm_source=db&amp;utm_medium=auth" target="_blank">Powered by <span>Odoo</span></a>
+                            <!-- Debranding odoo-->
+                            <!-- <a href="https://www.odoo.com?utm_source=db&amp;utm_medium=auth" target="_blank">Powered by <span>Odoo</span></a> -->
                         </div>
                     </div>
                 </div>
@@ -250,7 +254,7 @@
                 <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no"/>
                 <meta name="theme-color" content="#71639e"/>
                 <link rel="manifest" href="/web/manifest.webmanifest" crossorigin="use-credentials"/>
-                <link rel="apple-touch-icon" href="/web/static/img/odoo-icon-ios.png"/>
+                <link rel="apple-touch-icon" href="/web/static/img/haliblu-logo.png"/>
                 <script type="text/javascript">
                     // Block to avoid leaking variables in the script scope
                     {
@@ -327,9 +331,11 @@
                 <meta name="viewport" content="width=device-width, initial-scale=1"/>
             </t>
             <div class="card">
-                <img t-attf-src="data:image/png;base64,{{odoo_icon}}" alt="Odoo logo"/>
+                <!-- Debranding odoo: Replaced 'Odoo' with 'Calypso' -->
+                <img t-attf-src="data:image/png;base64,{{odoo_icon}}" alt="Calypso logo"/>
                 <h1>You are offline</h1>
-                <p>Check your network connection and come back here. Odoo will load as soon as you're back online.</p>
+                <!-- Debranding odoo: Replaced 'Odoo' with 'Calypso' -->
+                <p>Check your network connection and come back here. Calypso will load as soon as you're back online.</p>
                 <button onclick="location.reload()">Check again</button>
             </div>
         </t>
