--- a/odoo/addons/base/views/res_partner_views.xml
+++ b/odoo/addons/base/views/res_partner_views.xml
@@ -151,7 +151,8 @@
                                 <field name="zip" placeholder="ZIP" class="o_address_zip"/>
                                 <field name="country_id" placeholder="Country" class="o_address_country" options='{"no_open": True, "no_create": True}'/>
                             </div>
-                            <field name="website" string="Website" widget="url" placeholder="e.g. https://www.odoo.com"/>
+                            <!-- Debranding odoo: Replaced 'Odoo' with 'Calypso' -->
+                            <field name="website" string="Website" widget="url" placeholder="e.g. https://www.calypso.com"/>
                         </group>
                         <group>
                         </group>
@@ -232,7 +233,8 @@
                             <field name="mobile" widget="phone"/>
                             <field name="user_ids" invisible="1"/>
                             <field name="email" widget="email" context="{'gravatar_image': True}" required="user_ids"/>
-                            <field name="website" string="Website" widget="url" placeholder="e.g. https://www.odoo.com"/>
+                            <!-- Debranding odoo: Replaced 'Odoo' with 'Calypso' -->
+                            <field name="website" string="Website" widget="url" placeholder="e.g. https://www.calypso.com"/>
                             <field name="title" options='{"no_open": True}' placeholder="e.g. Mister"
                                 invisible="is_company"/>
                             <field name="active_lang_count" invisible="1"/>
@@ -536,7 +538,8 @@
               <p class="o_view_nocontent_smiling_face">
                 Create a Contact in your address book
               </p><p>
-                Odoo helps you track all activities related to your contacts.
+                <!-- Debranding odoo: Replaced 'Odoo' with 'Calypso' -->
+                Calypso helps you track all activities related to your contacts.
               </p>
             </field>
         </record>
@@ -570,7 +573,8 @@
               <p class="o_view_nocontent_smiling_face">
                 Create a new customer in your address book
               </p><p>
-                Odoo helps you easily track all activities related to a customer.
+                <!-- Debranding odoo: Replaced 'Odoo' with 'Calypso' -->
+                Calypso helps you easily track all activities related to a customer.
               </p>
             </field>
         </record>
@@ -604,7 +608,8 @@
               <p class="o_view_nocontent_smiling_face">
                 Create a new vendor in your address book
               </p><p>
-                Odoo helps you easily track all activities related to a vendor.
+                <!-- Debranding odoo: Replaced 'Odoo' with 'Calypso' -->
+                Calypso helps you easily track all activities related to a vendor.
               </p>
             </field>
         </record>
