--- a/odoo/addons/base/views/res_users_views.xml
+++ b/odoo/addons/base/views/res_users_views.xml
@@ -476,11 +476,12 @@
                             </group>
                             <group string="API Keys">
                                 <div class="text-muted" colspan="2">
-                                    API Keys are used to connect to Odoo from external tools without the need for a password or Two-factor Authentication.
-                                    <a href="https://www.odoo.com/documentation/17.0/developer/misc/api/external_api.html#api-keys" target="_blank">
+                                    <!-- Debranding odoo: Replaced 'Odoo' with 'Calypso' -->
+                                    API Keys are used to connect to Calypso from external tools without the need for a password or Two-factor Authentication.
+                                    <!-- <a href="https://www.odoo.com/documentation/17.0/developer/misc/api/external_api.html#api-keys" target="_blank">
                                         <i title="Documentation" class="fa fa-fw o_button_icon fa-info-circle"></i>
                                         Learn more
-                                    </a>
+                                    </a> -->
                                 </div>
                                 <div colspan="2" invisible="not api_key_ids">
                                     <field name="api_key_ids" nolabel="1" colspan="4" readonly="0">
