Replaced calypso with HaliBlu in haliblu-odoo

--- a/addons/base_setup/views/res_config_settings_views.xml
+++ b/addons/base_setup/views/res_config_settings_views.xml
@@ -105,8 +105,8 @@
                         <div id="contacts_settings">
                             <block title="Contacts" name="contacts_setting_container">
                                 <setting id="sms" string="Send SMS" documentation="/applications/marketing/sms_marketing/pricing/pricing_and_faq.html" help="Send texts to your contacts" />
-                                <!-- Debranding odoo: Replaced 'Odoo' with 'Calypso' -->
-                                <setting help="Automatically enrich your contact base with company data" title="When populating your address book, Calypso provides a list of matching companies. When selecting one item, the company data and logo are auto-filled." id="partner_autocomplete">
+                                <!-- Debranding odoo: Replaced 'Odoo' with 'HaliBlu' -->
+                                <setting help="Automatically enrich your contact base with company data" title="When populating your address book, HaliBlu provides a list of matching companies. When selecting one item, the company data and logo are auto-filled." id="partner_autocomplete">
                                     <field name="module_partner_autocomplete"/>
                                 </setting>
                         </block>
@@ -121,8 +121,8 @@
                                 </div>
                             </div>
                         </setting>
-                        <!-- Debranding odoo: Replaced 'Odoo' with 'Calypso' -->
-                        <setting string="API Keys" help="API Keys allow your users to access Calypso with external tools when multi-factor authentication is enabled." groups="base.group_system">
+                        <!-- Debranding odoo: Replaced 'Odoo' with 'HaliBlu' -->
+                        <setting string="API Keys" help="API Keys allow your users to access HaliBlu with external tools when multi-factor authentication is enabled." groups="base.group_system">
                             <button type="action" name="%(base.action_apikeys_admin)d" string="Manage API Keys" icon="oi-arrow-right" class="btn-link"/>
                         </setting>
                         <setting string="Import &amp; Export" help="Allow users to import data from CSV/XLS/XLSX/ODS files" documentation="/applications/general/export_import_data.html" groups="base.group_no_one" id="allow_import">
@@ -134,9 +134,9 @@
                     </block>
 
                     <block title="Progressive Web App" id="pwa_settings" groups="base.group_no_one">
-                        <!-- Debranding odoo: Replaced 'Odoo' with 'Calypso' -->
-                        <setting help="This name will be used for the application when Calypso is installed through the browser.">
-                            <field name="web_app_name" placeholder="Calypso"/>
+                        <!-- Debranding odoo: Replaced 'Odoo' with 'HaliBlu' -->
+                        <setting help="This name will be used for the application when HaliBlu is installed through the browser.">
+                            <field name="web_app_name" placeholder="HaliBlu"/>
                         </setting>
                     </block>
 
