--- a/addons/account/views/account_bank_statement_views.xml
+++ b/addons/account/views/account_bank_statement_views.xml
@@ -62,8 +62,8 @@
                 occurring over a given period of time on a bank account. You
                 should receive this periodically from your bank.
               </p><p>
-                <!-- Debranding odoo: Replaced 'Odoo' with 'Calypso' -->
-                Calypso allows you to reconcile a statement line directly with
+                <!-- Debranding odoo: Replaced 'Odoo' with 'HaliBlu' -->
+                HaliBlu allows you to reconcile a statement line directly with
                 the related sale or purchase invoices.
               </p>
             </field>
