--- a/addons/account/views/account_move_views.xml
+++ b/addons/account/views/account_move_views.xml
@@ -775,13 +775,13 @@
                     <!-- Currency consistency -->
                     <div class="alert alert-warning" role="alert"
                          invisible="not display_inactive_currency_warning or move_type not in ('in_invoice', 'in_refund', 'in_receipt')">
-                        <!-- Debranding odoo: Replaced 'Odoo' with 'Calypso' -->
-                        In order to validate this bill, you must <button class="oe_link" type="object" name="action_activate_currency" style="padding: 0; vertical-align: baseline;">activate the currency of the bill</button>. The journal entries need to be computed by Calypso before being posted in your company's currency.
+                        <!-- Debranding odoo: Replaced 'Odoo' with 'HaliBlu' -->
+                        In order to validate this bill, you must <button class="oe_link" type="object" name="action_activate_currency" style="padding: 0; vertical-align: baseline;">activate the currency of the bill</button>. The journal entries need to be computed by HaliBlu before being posted in your company's currency.
                     </div>
                     <div class="alert alert-warning" role="alert"
                          invisible="not display_inactive_currency_warning or move_type not in ('out_invoice', 'out_refund', 'out_receipt')">
-                        <!-- Debranding odoo: Replaced 'Odoo' with 'Calypso' -->
-                        In order to validate this invoice, you must <button class="oe_link" type="object" name="action_activate_currency" style="padding: 0; vertical-align: baseline;">activate the currency of the invoice</button>. The journal entries need to be computed by Calypso before being posted in your company's currency.
+                        <!-- Debranding odoo: Replaced 'Odoo' with 'HaliBlu' -->
+                        In order to validate this invoice, you must <button class="oe_link" type="object" name="action_activate_currency" style="padding: 0; vertical-align: baseline;">activate the currency of the invoice</button>. The journal entries need to be computed by HaliBlu before being posted in your company's currency.
                     </div>
                     <sheet>
                         <div name="button_box" class="oe_button_box">
