--- a/addons/account/views/terms_template.xml
+++ b/addons/account/views/terms_template.xml
@@ -28,8 +28,8 @@
         <div>
             <h1>STANDARD TERMS AND CONDITIONS OF SALE</h1>
             <p>You should update this document to reflect your T&amp;C.</p>
-            <!-- Debranding odoo: Replaced 'Odoo' with 'Calypso' -->
-            <p>Below text serves as a suggestion and doesn’t engage Calypso S.A. responsibility.</p>
+            <!-- Debranding odoo: Replaced 'Odoo' with 'HaliBlu' -->
+            <p>Below text serves as a suggestion and doesn’t engage HaliBlu S.A. responsibility.</p>
             <ol>
                 <li>
                     The client explicitly waives its own standard terms and conditions, even if these were drawn up after these standard terms and conditions of sale. In order to be valid, any derogation must be expressly agreed to in advance in writing.
