--- a/addons/analytic/views/analytic_line_views.xml
+++ b/addons/analytic/views/analytic_line_views.xml
@@ -49,8 +49,8 @@
             <p class="o_view_nocontent_empty_folder">
                 No activity yet on this account
             </p><p>
-                <!-- Debranding odoo: Replaced 'Odoo' with 'Calypso' -->
-                In Calypso, sales orders and projects are implemented using
+                <!-- Debranding odoo: Replaced 'Odoo' with 'HaliBlu' -->
+                In HaliBlu, sales orders and projects are implemented using
                 analytic accounts. You can track costs and revenues to analyse
                 your margins easily.
             </p><p>
@@ -165,8 +165,8 @@
             <p class="o_view_nocontent_empty_folder">
                No activity yet
             </p><p>
-                <!-- Debranding odoo: Replaced 'Odoo' with 'Calypso' -->
-                In Calypso, sales orders and projects are implemented using
+                <!-- Debranding odoo: Replaced 'Odoo' with 'HaliBlu' -->
+                In HaliBlu, sales orders and projects are implemented using
                 analytic accounts. You can track costs and revenues to analyse
                 your margins easily.
             </p><p>
