--- a/addons/auth_signup/views/auth_signup_templates_email.xml
+++ b/addons/auth_signup/views/auth_signup_templates_email.xml
@@ -29,8 +29,8 @@
                         <tr><td valign="top" style="font-size: 13px;">
                             <div>
                                 Dear <t t-out="object.name or ''">Marc Demo</t>,<br/><br/>
-                                <!-- Debranding odoo: Replaced 'Odoo' with 'Calypso' -->
-                                A password reset was requested for the Calypso account linked to this email.
+                                <!-- Debranding odoo: Replaced 'Odoo' with 'HaliBlu' -->
+                                A password reset was requested for the HaliBlu account linked to this email.
                                 You may change your password by following this link which will remain valid during 24 hours:<br/>
                                 <div style="margin: 16px 0px 16px 0px;">
                                     <a t-att-href="object.signup_url"
