--- a/addons/product/views/product_views.xml
+++ b/addons/product/views/product_views.xml
@@ -250,8 +250,8 @@
                         <field name="image_1920" widget="image" class="oe_avatar" options="{'preview_image': 'image_128'}"/>
                         <div class="oe_title">
                             <label for="name" string="Product Name"/>
-                            <!-- Debranding odoo: Replaced 'Odoo Enterprise' with 'Calypso' -->
-                            <h1><field name="name" readonly="1" placeholder="e.g. Calypso Subscription"/></h1>
+                            <!-- Debranding odoo: Replaced 'Odoo Enterprise' with 'HaliBlu' -->
+                            <h1><field name="name" readonly="1" placeholder="e.g. HaliBlu Subscription"/></h1>
                             <field name="product_template_attribute_value_ids" widget="many2many_tags" readonly="1"/>
                             <p>
                                 <span>All general settings about this product are managed on</span>
