--- a/addons/website/views/website_templates.xml
+++ b/addons/website/views/website_templates.xml
@@ -254,8 +254,8 @@
                 <path fill="#FFF" d="M8 8V1a1 1 0 1 1 2 0v8a1 1 0 0 1-1 1H1a1 1 0 1 1 0-2h7z"/>
             </svg>
             <div class="o_frontend_to_backend_buttons d-flex">
-                <!-- Debranding odoo: Replaced 'Odoo' with 'Calypso' -->
-                <a href="#" title="Go to your Calypso Apps" class="o_frontend_to_backend_apps_btn fa fa-th d-flex align-items-center justify-content-center text-decoration-none" data-bs-toggle="dropdown"/>
+                <!-- Debranding odoo: Replaced 'Odoo' with 'HaliBlu' -->
+                <a href="#" title="Go to your HaliBlu Apps" class="o_frontend_to_backend_apps_btn fa fa-th d-flex align-items-center justify-content-center text-decoration-none" data-bs-toggle="dropdown"/>
                 <div class="dropdown-menu o_frontend_to_backend_apps_menu" role="menu">
                     <a role="menuitem" class="dropdown-item" t-esc="menu['name']"
                        t-as="menu" t-foreach="env['ir.ui.menu'].with_context(force_action=True).load_menus_root()['children']"
@@ -1948,8 +1948,8 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-lg-9 pb24">
-                            <!-- Debranding odoo: Replaced 'Odoo' with 'Calypso' -->
-                            <h3>50,000+ companies run Calypso to grow their businesses.</h3>
+                            <!-- Debranding odoo: Replaced 'Odoo' with 'HaliBlu' -->
+                            <h3>50,000+ companies run HaliBlu to grow their businesses.</h3>
                             <p class="lead">Join us and make your company a better place.</p>
                         </div>
                         <div class="col-lg-3 pb24">
@@ -2327,8 +2327,8 @@
     </t>
 </template>
 
-<!-- Debranding odoo: Replaced 'Odoo' with 'Calypso' -->
-<template id="show_website_info" inherit_id="website.website_info" name="Show Calypso Information">
+<!-- Debranding odoo: Replaced 'Odoo' with 'HaliBlu' -->
+<template id="show_website_info" inherit_id="website.website_info" name="Show HaliBlu Information">
     <xpath expr="//div[@id='wrap']" position="inside">
         <div class="oe_structure">
             <section class="container">
@@ -2337,8 +2337,8 @@
                     <!-- <small groups='base.group_no_one'>Odoo Version <t t-out="version.get('server_version')"/></small> -->
                 </h1>
                 <p>
-                    <!-- Debranding odoo: Replaced 'Odoo' with 'Calypso' -->
-                    Information about the <t t-esc="res_company.name"/> instance of Calypso.
+                    <!-- Debranding odoo: Replaced 'Odoo' with 'HaliBlu' -->
+                    Information about the <t t-esc="res_company.name"/> instance of HaliBlu.
                      <!--Debranding Odoo  -->
                     <!-- the <a target="_blank" href="https://www.odoo.com">Open Source ERP</a>. -->
                 </p>
