--- a/odoo/addons/base/views/ir_ui_view_views.xml
+++ b/odoo/addons/base/views/ir_ui_view_views.xml
@@ -24,8 +24,8 @@
                     </group>
                     <div class="oe_edit_only alert alert-info" role="alert">
                         Be aware that editing the architecture of a standard view is not advised, since the changes will be overwritten during future module updates.<br/>
-                        <!-- Debranding odoo: Replaced 'Odoo' with 'Calypso' -->
-                        We recommend applying modifications to standard views through inherited views or customization with Calypso Studio.
+                        <!-- Debranding odoo: Replaced 'Odoo' with 'HaliBlu' -->
+                        We recommend applying modifications to standard views through inherited views or customization with HaliBlu Studio.
                     </div>
                     <notebook>
                         <page string="Architecture" name="architecture">
@@ -100,8 +100,8 @@
             <field name="res_model">ir.ui.view</field>
             <field name="view_id" ref="view_view_tree"/>
             <field name="context">{'search_default_active': 1}</field>
-            <!-- Debranding odoo: Replaced 'Odoo' with 'Calypso' -->
-            <field name="help">Views allows you to personalize each view of Calypso. You can add new fields, move fields, rename them or delete the ones that you do not need.</field>
+            <!-- Debranding odoo: Replaced 'Odoo' with 'HaliBlu' -->
+            <field name="help">Views allows you to personalize each view of HaliBlu. You can add new fields, move fields, rename them or delete the ones that you do not need.</field>
         </record>
 
         <menuitem action="action_ui_view" id="menu_action_ui_view" parent="base.next_id_2" sequence="2"/>
