--- a/odoo/addons/base/views/res_users_views.xml
+++ b/odoo/addons/base/views/res_users_views.xml
@@ -476,8 +476,8 @@
                             </group>
                             <group string="API Keys">
                                 <div class="text-muted" colspan="2">
-                                    <!-- Debranding odoo: Replaced 'Odoo' with 'Calypso' -->
-                                    API Keys are used to connect to Calypso from external tools without the need for a password or Two-factor Authentication.
+                                    <!-- Debranding odoo: Replaced 'Odoo' with 'HaliBlu' -->
+                                    API Keys are used to connect to HaliBlu from external tools without the need for a password or Two-factor Authentication.
                                     <!-- <a href="https://www.odoo.com/documentation/17.0/developer/misc/api/external_api.html#api-keys" target="_blank">
                                         <i title="Documentation" class="fa fa-fw o_button_icon fa-info-circle"></i>
                                         Learn more
