--- a/odoo/addons/base/wizard/base_export_language_views.xml
+++ b/odoo/addons/base/wizard/base_export_language_views.xml
@@ -31,8 +31,8 @@
                             <li>TGZ format: bundles multiple PO(T) files as a single archive</li>
                             </ul>
                         </p>
-                        <!-- Debranding odoo: Replaced 'Odoo' with 'Calypso' -->
-                        <p>For more details about translating Calypso in your language. 
+                        <!-- Debranding odoo: Replaced 'Odoo' with 'HaliBlu' -->
+                        <p>For more details about translating HaliBlu in your language. 
                         <!-- please refer to the
                            <a href="https://github.com/odoo/odoo/wiki/Translations" target="_blank">documentation</a>. -->
                         </p>
