--- a/odoo/addons/base/wizard/base_partner_merge_views.xml
+++ b/odoo/addons/base/wizard/base_partner_merge_views.xml
@@ -21,8 +21,8 @@
                         <p class="oe_grey" invisible="state != 'option'">
                             Select the list of fields used to search for
                             duplicated records. If you select several fields,
-                            <!-- Debranding odoo: Replaced 'Odoo' with 'Calypso' -->
-                            Calypso will propose you to merge only those having
+                            <!-- Debranding odoo: Replaced 'Odoo' with 'HaliBlu' -->
+                            HaliBlu will propose you to merge only those having
                             all these fields in common. (not one of the fields).
                         </p>
                         <group invisible="state not in ('selection', 'finished') or number_group == 0">
